# coverage-lab-demo

./: .gitignore  .vercelignore  README.md  The Geometry of Intent kaggle writeup.txt  dev.bat  dev.sh  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json
.github/workflows/: frontend-ci.yml  platform-ci.yml
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  proxy.ts
infra/: README.md
infra/compose/: README.md
infra/config/: .env.example
infra/minio/: .env.example  README.md  prefixes.py  (+3 more)
scripts/: dev.mjs  gen_proto.sh
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  analytics_runtime.py  config.py  dependencies.py  frontend_reads.py  main.py  metrics.py  observability.py  replay_tokens.py
services/api/app/api/: routes.py
services/api/app/auth/: __init__.py  dependencies.py  providers.py
services/api/app/contracts/: __init__.py  analytics.py  errors.py  forensics.py  health.py  integrity.py  intelligence.py  replay.py  scoring.py  session.py
services/api/app/db/: __init__.py  context.py
services/api/app/db/sql/: 0001_ml_play_scores.sql
services/api/app/intelligence/: __init__.py  labels.py  orchestrator.py  report.py  tools.py
services/api/app/proto/: __init__.py  inference_pb2.py  payload_hash.py
services/api/app/scoring/: __init__.py  cache.py  inference_client.py  local_scorer.py  payload.py
services/api/scripts/: regenerate_fixture_scores.py
services/api/tests/: test_analytics_routes.py  test_app.py  test_duckdb_backend_routes.py  test_heroku_database.py  test_intelligence.py  test_intelligence_benchmark.py  test_scoring_path.py  test_startup_guards.py
services/api/tests/fixtures/: intelligence_benchmark.json
services/inference/: Dockerfile  README.md  bentofile.yaml  pyproject.toml
services/inference/bundle/: calibrator.json  centroids.npy  manifest.json  weights.json
services/inference/scripts/: build_fake_bundle.py
services/inference/src/projectedge_inference/: __init__.py  app.py  manifest.py  observability.py  readiness.py  scorer.py  service.py  settings.py
services/inference/tests/: test_readiness_state.py  test_scorer.py
services/realtime/: pyproject.toml
services/realtime/app/: config.py  main.py  streamer.py  token.py
(+125 files in other folders)
