[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectedge-api"
version = "0.1.0"
description = "ProjectEdge Backend Phase 0 API scaffold."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "prometheus-client>=0.21,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "projectedge-analytics>=0.1.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "protobuf>=6,<7",
  "httpx>=0.28,<1.0",
  "jinja2>=3.1,<4.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "structlog>=24.4,<25.0",
  "uvicorn[standard]>=0.34,<1.0",
  "asyncpg>=0.30,<1.0",
  "opentelemetry-api>=1.31,<2.0",
  "opentelemetry-sdk>=1.31,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.52b0,<1.0",
  "opentelemetry-exporter-otlp>=1.31,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
