[project]
name = "projectedge-inference"
version = "0.0.1"
description = "ProjectEdge inference service scaffold"
requires-python = ">=3.11"
dependencies = [
  "bentoml>=1.3.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "protobuf>=6,<7",
  "numpy>=1.26,<3",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "pydantic>=2.8.0",
  "prometheus-client>=0.21.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
