[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectedge-realtime"
version = "0.1.0"
description = "ProjectEdge Realtime WebSocket replay streaming service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "protobuf>=6,<7",
  "pydantic-settings>=2.6,<3.0",
  "projectedge-analytics>=0.1.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
  "structlog>=24.4,<25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
